--- a/scripts/swis_preprocessing.ipynb
+++ b/scripts/swis_preprocessing.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 195,
-   "metadata": {},
+   "execution_count": 216,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Script to clean capacity values of SWIS compost sites and make spatial\n",
@@ -23,8 +25,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
-   "metadata": {},
+   "execution_count": 217,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#check wd\n",
@@ -33,13 +37,18 @@
     "#change wd\n",
     "os.chdir(\"/Users/anayahall/projects/grapevine\")\n",
     "\n",
+    "#######################################################################\n",
+    "# Starting from INTERIM data (somewhat preprocessed in R - may come back to)\n",
+    "#######################################################################\n",
+    "\n",
+    "\n",
     "#read in compost facilities csv\n",
     "df = pd.read_csv(\"data/interim/swis_compost.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +61,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +89,7 @@
        "Name: County, dtype: int64"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +117,7 @@
        "Name: CapacityUnits, dtype: int64"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,8 +128,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
-   "metadata": {},
+   "execution_count": 221,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Identify and recode oddly labeled capacity units (those lacking time unit)\n",
@@ -143,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +289,7 @@
        "102     Cubic Yards    9500.0   Cubic Yards      7.0                NaN  "
       ]
      },
-     "execution_count": 201,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +527,7 @@
        "108     0.0  "
       ]
      },
-     "execution_count": 202,
+     "execution_count": 223,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 225,
    "metadata": {
     "collapsed": true
    },
@@ -620,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -817,13 +828,37 @@
        "4    2500.0    Cubic Yards      NaN                NaN     0.000000  "
       ]
      },
-     "execution_count": 205,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()\n"
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "332485.98660714296"
+      ]
+     },
+     "execution_count": 230,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# df.columns\n",
+    "# m3 * yd3/m3 * tons/yd3\n",
+    "#cap_m3 * (1/0.764555) * (1/2.24)\n",
+    "\n",
+    "sum(df.cap_m3) * (1/0.764555) * (1/2.24)"
    ]
   },
   {
