start making maps and adding buffers

--- a/scripts/swis_preprocessing.ipynb
+++ b/scripts/swis_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -15,6 +15,7 @@
     "import os\n",
     "import numpy as np\n",
     "import shapely as sp\n",
+    "from shapely.geometry import Point\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import geopandas as gpd\n",
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +62,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,21 +76,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Riverside         10\n",
        "Tulare            10\n",
+       "Riverside         10\n",
        "San Bernardino    10\n",
        "Los Angeles        9\n",
-       "Napa               6\n",
+       "San Diego          6\n",
        "Name: County, dtype: int64"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +118,7 @@
        "Name: CapacityUnits, dtype: int64"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -154,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +290,7 @@
        "102     Cubic Yards    9500.0   Cubic Yards      7.0                NaN  "
       ]
      },
-     "execution_count": 222,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +528,7 @@
        "108     0.0  "
       ]
      },
-     "execution_count": 223,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -568,20 +569,20 @@
     "#how to assign values:\n",
     "# df.at[i, 'CapacityUnits'] = \"Tons/year\"\n",
     "\n",
-    "print(\"CLEANING CAPACITY - CONVERT TO CUBIC METERS / MONTH\")\n",
+    "print(\"CLEANING CAPACITY - CONVERT TO CUBIC METERS / YEAR\")\n",
     "n = len(df.index)\n",
     "for i in range(n):\n",
     "    #print(\"index: \", i)\n",
     "    if df.CapacityUnits[i] == \"Tons/year\":\n",
     "        # print(\"tons/year\")\n",
-    "        # tons/year * cu yards/ton * cu meters/cu yards * years/month \n",
-    "        #df.cap_m3[i] = df.Capacity[i] * 2.24 * 0.764555 * (1/12)\n",
-    "        df.at[i, 'cap_m3'] = df.Capacity[i] * 2.24 * 0.764555 * (1/12)\n",
+    "        # tons/year * cu yards/ton * cu meters/cu yards  \n",
+    "        #df.cap_m3[i] = df.Capacity[i] * 2.24 * 0.764555 \n",
+    "        df.at[i, 'cap_m3'] = df.Capacity[i] * 2.24 * 0.764555\n",
     "        # print(df.cap_m3[i])\n",
     "    elif df.CapacityUnits[i] == \"Cu Yards/year\":\n",
     "        # print(\"cu yrds/year\")\n",
-    "        # cu yards/year * cu meters/cu yards * years/month \n",
-    "        df.at[i, 'cap_m3'] = df.Capacity[i] * 0.764555 * (1/12)\n",
+    "        # cu yards/year * cu meters/cu yards \n",
+    "        df.at[i, 'cap_m3'] = df.Capacity[i] * 0.764555 \n",
     "        # print(df.cap_m3[i])\n",
     "    elif df.CapacityUnits[i] == \"Cubic Yards\":\n",
     "        print(\"index: \", i ,\" - cu yrds --- NEED TO DISENTANGLE STILL!\")\n",
@@ -590,13 +591,13 @@
     "        print(\"tons\") #there should be none of these\n",
     "        # print(df.cap_m3[i])\n",
     "    elif df.CapacityUnits[i] == \"Tons/day\":\n",
-    "        # tons/day * cu yards/ton * cu meters/cu yards * days/year * years/month \n",
-    "        df.at[i, 'cap_m3'] = df.Capacity[i] * 2.24 * 0.764555 * (365/1) * (1/12)\n",
+    "        # tons/day * cu yards/ton * cu meters/cu yards * days/year \n",
+    "        df.at[i, 'cap_m3'] = df.Capacity[i] * 2.24 * 0.764555 * (365/1) \n",
     "        # print(\"tons/day\")\n",
     "        # print(df.cap_m3[i])\n",
     "    elif df.CapacityUnits[i] == \"Cu Yards/month\":\n",
-    "        # cu yards/month * cu meters/cu yards \n",
-    "        df.at[i, 'cap_m3'] = df.Capacity[i] * 0.764555\n",
+    "        # cu yards/month * cu meters/cu yards * months/year\n",
+    "        df.at[i, 'cap_m3'] = df.Capacity[i] * 0.764555 * 12\n",
     "        # print(\"cu yrds/month\")\n",
     "        # print(df.cap_m3[i])\n",
     "    elif df.CapacityUnits[i] == \"Tires/day\":\n",
@@ -610,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -618,7 +619,6 @@
    "source": [
     "# Last thing is to make all points spatial\n",
     "# try using shapely package\n",
-    "# from shapely.geometry import Point\n",
     "\n",
     "# point = Point(df.Longitude[0], df.Latitude[0])\n",
     "\n",
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
        "4    2500.0    Cubic Yards      NaN                NaN     0.000000  "
       ]
      },
-     "execution_count": 226,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +848,7 @@
        "332485.98660714296"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +872,7 @@
        "109"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,28 +889,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11637b9e8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1120c5cc0>"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAM0AAADCCAYAAADq6ka8AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHbZJREFUeJztnXl8lOW1+L9nZrICQRHEhEjwVhAsCMgiIHVFr9goCKjF\nglSpfryKdWmtYuvOrV5xqyh4ERdAA1JwqVRscV+CQkiEQPFa7Q8VQgLaVqBAkpk5vz9mJk6SSTKT\nWZOc7+czn2Se932f97zJnHme5zxnEVXFMIzwcSRbAMNoa5jSGEaEmNIYRoSY0hhGhJjSGEaEmNIY\nRoSY0hhGhJjSGEaEmNIYRoSY0hhGhLgSebPu3btrnz59EnlLwwiLjRs3fqOqPcI5N6FK06dPH0pK\nShJ5S8MICxH5MtxzbXpmGBGSUkqjqjy/+XnM89pIZVJKaTbu2si0l6ZRuqs02aIYRpMkdE3TFFX7\nq1CUZz95FkF4dtOz9MrphSD07Nwz2eIZRj0kkVOh4cOHa0NDQNmuMk5ceCIOcZDhzOCg+yBZriyq\nPdV41UvplaUMzR2aMBmNjomIbFTV4eGcm/Tp2dDcobw69VU6p3em1lsLQK23ls7pnVk9dbUpjJFy\nJF1pAAr7FXL18KsBcIoTgGtGXMOP+/04mWIZRkhSQmkAisqLcHvdTDhuAl71UlRelGyRDCMkKaE0\nHq+HLhldALig/wV8ePmH9D2iLx6vJ8mSGUZjkq40W6q2sHXPVkQEgPuL7yc7LZuHz34Yp8OZZOkM\nozFJNTkvK1/GJS9eUq+tfHc5g58YDMDVw6/msXMfq1Mow0gFkjrSTB00ldtOuS3ksSuGXsH8kvm2\n0WmkHEmfnt19+t2M6jWqXtuw3GGku9LrNjor91dStb8qSRIaRn2SvrkJ4LrbhUc99MjuwZ4DewDI\ncmXZRqeRMNrU5maNu4auGV1ZdN4idt+0m1kjZwHYRqeRsiTd9yzdlc63N39b937e+Hl0TuvMA+se\nsI1OIyVJ+kgTiqItRXjVy4T+ttFppB5hK42IOEWkTERW+993E5G1IvI3/8/DYyGQx+uh3xH9KL68\nmFUXrbKNTiPlCNsQICI3AsOBHFUtFJH7gX+o6n0icgtwuKre3FwfTRkCDCPZxNwQICL5wI+BRUHN\nE4DF/t8XAxMjEdIw2irhTs8eAX4NeIPaeqrqLv/vlYBFixkdghaVRkQKgd2qurGpc9Q3xws5zxOR\nK0WkRERK9uzZ03pJDSNFCGekORk4X0S2A8uBM0TkOaBKRHIB/D93h7pYVReq6nBVHd6jR1hppZKO\nJfgwmqNFpVHV2aqar6p9gJ8Ab6nqNOCPwAz/aTOAV+ImZYKxBB9Gc0SzuXkfsEJEZgJfAhfFRqTk\nUbmvklXbVrHtm22W4MNokpTwPUsFAgk+ADKcGVR7qs3vrQPRpnzPUoGq/VXkdsnlx319rjo1nhrA\n/N6M0CTd9yzZNEwhBaB+Q6Db62bygMnm92bUo8OPNKFSSAG4HC4E4a3/91YSpTNSkQ6vNPB9CqnA\n+s4pTm4acxPFM4ub9Hszs3THxZTGT9GWIhRl0oBJKEpReRGj8kexdvrakAk+zCzdcWk3ShPNN39T\nntVuj7tRn1X7q6jcX1kv77SFY3cs2o3JuaSihBFPjmDKgCm8MOUFHI7ovw8CfZZcUcKwvGGUVpQy\n7MlhCEKmK9PCsdsRHcrkHPzND7By20rml8yP6pu/qdEkkL8gOy2bWo8/HNtjZumORpseaeptSDoy\nqPZW1zu+YvIKLhx4Yav6DK5ikOnMpNpTXWeKPuHIE9i8ezMAgjBr5Cx+86PfmNdAG6bDjDRDc4fy\nq9G/AmikMAAXrbqIZeXLIu6zoQn6kOcQipLmSAOoUxjw7enMWz+Pox48irJdZa19FKMN0aaVBmDu\n2XMZkz8m5LE7TrmDqYOmRtxnwyoGDnGQ7kyvG2mCcYoTpzh55eJXbHrWQWjzSgOwY9+ORm2j80dz\n5+l3trrP4OQeAJnOTMCvRDgQBKc4ERF+ffKvOb//+Xi9Xq7+09V4vd7mujbaOG1eaQLmYof4HqV7\ndncA1u9cH3WfwSboGk/N9xly8KJoo2w5z5U/x4KSBZY9p72jqgl7DRs2TONBdW21druvmy7auEhV\nVZ/c+KR2u6+bVtdWx6R/t8et45aM04++/kjdHreOWDhCRywcoW6PW9d9vU5PevIkLa0o1YHzByp3\nooPmD9JNlZu0vLI8Jvc34g9QomF+jtu09SwVCFX5IJiiSUWtWlcZiaXDWM+iQWPkO9Zc5YPWGiKM\n1KbDKk0sfcdCVT6I1hBhpC4dQmmCR5WGu/1Plz3Nz17+Gbv27mq5o2bYULEBgLwueUB0hggjtWn3\nSqOqzHlvDtNemsY1r13DUQ8eRa+HevF02dMoysKNC1m8aTF5D+e1enMyuPLBzht38uR5T9I1oys1\n7poYP42RCrRrQ0DV/irKKssY//z4urbJ/Sfz+hevc7D2IN6g3Ie5nXJ5ffrrOHAwsOfAhMlopAaR\nGALardK88cUbnPXcWa261ixeHY8Obz0r21XWaoUB6N+9fwylMdob7VJpAk6XORk5EV/7y9G/ZMhR\nQ+IgldFeaJdKA/WdLhsiSJMK9eC6By2E2WiWdqs0AM+XPw9Ql5opgKJcNewqBAGgd9fe9Y7P3zDf\nQpiNJmm3SuPxejiu+3F8ePmH/KjgRxyeWb9Q25JNS+pc/b/67qt6x57+5GnyHsyzGBkjJOGU2sgU\nkfUisklEtorIXf72ISLykYh84i+lMTL+4oaP0+Fk7fS1jDl6DLPHzKbPYX3qpmQ5GTnkdsnlntPu\nIScjp85Duu5acdIlo0tSQphj5d5jxI9wMmxWA2eo6n4RSQM+EJE1wN3AXaq6RkTOBe4HToufqK3j\n3vfv5da3bq3Xtrd6L2WVZZRVlnHK0adQvLMYr/r2bARBRJJWUTrg3tO/e3+G5Q1L+P2Nlgmn1Iaq\n6n7/2zT/K1DEKbCa7gpUxEXCKJn9o9lc/MOLQx6b+sOpbN+7Ha96yXJlAZDlyopbRenmRhFLDdV2\nCLfmplNEPsFXuGmtqn4MXA/MFZGvgQeA2U1cm/RKaMunLCevc169trwueSydtJR+R/Tj/Z+9z8m9\nT2bReYsY03sM7/3svbhUlC6pKGHaS9PYWFG/qFzZrrJG7j1PlT5Fr4d62boqBYnII0BEDgNeAq4F\nrgTeVdVVInIRcKWqjmvu+mTG08hdPktZpiuTQ+5DAOgdrVs3eL1eZq2ZxWPjHwsrv1rV/ioU5drX\nrmXltpVcePyFPDr+0Xp1b1Z/tpqfvvhTDtQewO1143K4yE7LpmhSkSVgTwBx8whQ1X8BbwPn4Kt+\n9qL/0B+AlDIEBHOw5iAuh4tbx97Kwd8c5Jaxt+ByuDhYc7BVC+9IwpoDo0jeg3m8uM3351r111WN\nrHMNk3kASVtXGc0TjvWsh3+EQUSygLOAT/GtYU71n3YG8Ld4CRktWelZ1N5Wy3+f+d8A3HvmvdTe\nVktWelZEcTVbqrawuWozc4vnAnB/8f1srtrMlqotLV6raJ2DaCDHQEOCk3nEa11lRE841rNcYLGI\nOPEp2QpVXS0i/wJ+LyIu4BC+6VqbITBlCl54N1cqMFRYc/nucgY/MRiI3skzkMxjxZQVnJR/Eh/t\n+Ijb3r4Nj9cTMgG7kTzarZdzc4TKohmck3nK8VN4YfILiAhF5UVcMugSRITb376de967p1F/d5xy\nR7NRmqs/W815y85r3D51tU2/UoQO7+XcEqGyaAZKBd4w6gZW/nUlReVFjaZurQ1rHn/seJzUHy2c\n4uScY8+J3UMZCaNDKg00XnirKhcefyFr/74WgN998Lu6tcsznzzD4xsep3JfZavDmtOcaQjCpAGT\nEIQ0Z1qsH8lIEB1WaeD7hfeJuSfiUQ9PlT3Flt2+Rf22b7axYusKAP635H+Z9dosch/KJTstu1Vh\nzWMLxrJu5jpWXbSK4pnFjO09Nq7PZsSPDrmmAd/C+5znz2HO6XM4Kf8kpq6cyvKty0OeK0idtev1\naa8zpOcQqxDQzrBw5wgJLtkRLmunrWXcD5rdyzXaEGYIiJCAYSBcBOGs584y95YOiimNn7P/42wy\nXZk4cNTtyKc707mg/wX1znOIIyZhAxYC0HYxpfGT7krnyE5HgsCE/hNwiIPczrls3OVzrgxEeXrV\nGxP3FqsO3XYxpfETXF5j5YUruf2U2/nB4T+gb7e+9OzUExHhtILTAKJyb7EQgHZAuOUFYvGKV6mN\nWLNh5wblTrRkZ0m9Mhuqquu+XqfjloxTt8etqqper1eXfLJEr3r1KvV4PM32W1pRqtyJOu5yaNac\nLOVONGtOljrucih3oqUVpXF/NiM0RFBqw0aaIEKNAnsO7OG5C57jpPyTABiVP4q109fW+YNt3LWR\nS1++lCc2PsHz5c83u05pzhOhpTWS2hooZQjHYbND0NAfLRAINn/DfLzqpfTK0nof6qr9VWzbs40n\nNj5R13b727ez/bvtuMTFxYNCR4sGPBEeWPdARCEAFgadOthI4yeSUSAQI3P6ktN5YesLde3bv9sO\nwE9e/AkLNixocp0SSQhAqNFv175dzF8/30adJGFKE0S4gWABBUt3pIfsxyUuZq2ZFTJUOVQ9z6ZC\nq5sLg75mzTUWb5MkTGkaEO4oUNivkBtH3xi6E6HJdUogtVRTa6Rgmhr9As6eH+38yCxvScCUJohI\nRgHwKVhTxCpUOTD6BaZibq+7Th5LvpEcTGmCiGQU8Hg9HHv4seSk57CocFFdIsI0RxpurzumU6ei\nLUUoyuj80b57q09pwrW8GbHFlKaVOB1O3pzxJt/N/o6BPQeyt3ovz054lprbalg3c13MUkAFj37F\nM4uZfsJ0ABz+f50l30g8pjRRELBsLd28FEEo2VVC5f5KjjnsmCZHqEhpOPq9++W7OMTBxAETLflG\nkrB9mlYS6b5OLLDkG6mBjTStpCnLVqe0TjEpDBXKAyCSNZcRP0xpoiDUvs7kAZNjUhgqFl7Qbreb\ngfMH4na7o5LFqI8pTZQE9nX+89j/xOP1sHLbyqi8l6P1gg4eoa5+7Wq27tnKNWuuac2jGU1g4c5R\nEMgzMH3QdGa8MqOuTEegCkEgj9qc0+dw649uRUSa7a+lfGzhrJNKKkoY8eQI7j3zXm576zbc6sYl\nLpZNWYYDB5OOnxTLP0G7wXIEJIGmEpjfddpd3PDnGyi5oiQsR8vWJkIPZAwdt2QcW/dsbfK8WSNm\nMe/cea16xvZMTHMENFUJzX/sWhH51N9+fzRCt3UarW8UZgyewef/+DyiaVZrEqEH+6j93zf/12z/\nY44eE8ljGSEIZ00TqIQ2GBgCnCMio0TkdGACMFhVf4ivRk2HJrC+ObXgVNzqZt76ea2qNxNpIvSh\nuUNZMnEJ2WnZdd4CobjjlDuiyjdt+IimEtp/AfeparX/vN1xk7INELxz/+aMN5l71lyc4qTG40sk\nGK7LS6T+b+AbaS59+VL21+wPWY0gQEvpc43wCGtN468YsBE4FnhcVW/2V0Z7BV+tmkPAr1R1Q3P9\ntOc1TShmvzGbB9Y9gKoiItw05iZ+d+bv4nKv33/0e67/8/XNnrPv5n10zuwcl/u3dWKe90xVPao6\nBMgHRorIQHzeBN2AUcBNwAoJYR5KhfKBySKR9WZmjZzly6bTgJyMHK4deS3dMruR7god/2NERjSV\n0HYAL/qnb+sBL9A9xDULVXW4qg7v0aNHLGRuE7RmmhUNToeTTFcm8H26KfAZER4d/yjf3vytKU2M\niKYS2svA6f72fkA68E38RG1bJNrlxeP10KdrH3pk96i3rlm6aakFqcWYcEaaXOBtEdkMbMBX3Xk1\n8DTwHyKyBVgOzFALWk8am6s2895X77HnwB4ynBkAZDgz2LFvhwWpxZgWvZxVdTPQyNyjqjXAtHgI\nZUROwIE0sDEKvmC1nIwciiYVWZBaDDHfs3ZEcGi0IKiqBanFAVOadkbRliI86kFRPOqxILU4YErT\njqjYW0FB1wLO6HMGAGcecya9u/amYm9FkiVrX1jkZjsh2EM6kD/g3S/fxateej3cKy6RpB0VU5p2\nhle9ePECvnRPRuyx6Vk7oamsn+mOdEvxFGNMadoRhf0KyUzLrNeWmZZp1rMYY0rTjvB4PdR4ahCE\nSQMmIQg1npq4ue50VExp2hlje49l3cx1rLpoFcUzixnbe2yyRWp3WLizYWAl0TsM8a6OZtXXQmNK\n04aJd4Voq0AdGtunaYMEMs8E50brldMLQejZuWfK99/WsTVNGyMWudGS2X+qYmuadkTDdUU0FaLD\nId79twdMaVKcUOuK1uRGi4R499/WMaVJUVrK6RzvpB2JTArS1jBDQArSUu2bDT/fENc6NVYHp3nM\nEJCihJPTWVUpKi/ikkGXtJhc3WgeMwS0A8JZV9g+SnIwpUlhmlpXRFvDxogOU5oUpalkgyU7S+oq\nBLQmuXpLBEzcHo+Hq/90NV6vN0ZP1H4wQ0CKEkg2GCCQbBBolKopsI8Si1RNgSnf599+zoKSBYzO\nH830wdOj6rO9YSNNGyQe+yiBKd+DxQ8C8NDHDwFw+zu3s7lqM1uqtkQpdfvBlKaNEsk+SkveyoGi\nULkP5rJ863IA9lbvBWD7v7Yz+InBDHpiEMvKl4XVX3vHlKYNEmly9ZasbAHXmU5pnZq9b//u/Zvt\nL6BMXq+3Xa+Loiof6D/+SxFREWlUMcCID+EmV4/EylbYr5BrR16LQ0J/JAr7FeJyuCivKg/Zn6py\n9zt3M+2laSwuW8y0l6Yx5/05LChZ0O68CVrc3PTXnOmkqvtFJA34ALhOVT8SkaOBRUB/YJiqNls1\nwDY3E0drvJULHing6+++DllNLU3SqFWfA2emM5NDnkP1+nts/GPMWjMLgC5pXdhXu4/DMw/nn4f+\nyYDuA1g+ZTkOHAzsOTDsZ0jk5m1MNzebKR8I8DDw66D3RooQqbeyx+vhqM5HNVl+MFhh3Oqu6y/T\n6ct+E1AYgH21+wD456F/ArDtm22N1kXhkKqbt2GtaUTE6S8XuBtfqY2PRWQCsFNVN8VVQqPVRGJl\nczqcfPzzj3no7Iea7bPPYX3q+lNVDrgPhC1PoFBuS4aEhtPKZz55hsc3PE7lvsqw7xVPIvI98xd3\negm4DngSOFtVvxOR7cDwUNMzEbkSuBKgd+/ew7788stYyG2EScEjBezYu4OJ/Sfy8qcvc3TO0Wy/\nfnuz11y44kJWblsZ8pggdaORIHRJ78Lemr0tyjE6fzTFM4sBKKkoYcSTIyi5ooRhecPqnRdqWpnh\nzKDaUw0QtyC4uPmeBZUPnAAcA2zyK0w+UCoiR4W4pkOWD0wFWlvCcH3F+iaPKUp2Wjarp66meGYx\nI/NHMjp/dJPnBwwL63euD8swETytDFTGDvws7FtIbpfcpLsLhWMI6AHUquq//OUD/wL8j78aWuCc\n7TQx0gRjhoDUx+P1cM7z51BeVc6eA3s4peAU3tn+DuCbkoWqUl3wcAFf7f2qUV+3nHwLb21/i/U7\n19MprRP/rv132IaJy16+jGc3PVuvv+DzN16xkRPzTozZc8d6pGmqfKDRDnE6nLz+09cZ1HMQxZcX\n8/aMt+nZyZdM4/zjzm+0kVqxt4L8nPy694HShQAzh8xkRN4IBOGyoZexeOJi0p3pYRkm3tr+FoLg\ncnzv6VXrrSXLlQXQpMEiEbS6fGCDc/rESiAj+QT7vXm8Hgb1HMQrp7/SKCBtc9VmTlxY/9s+eJ+n\n7+N9yXJl1TmVPr7+cRRflbbmKrUFB8G9/OnLzC2ei0c9oHDcEcdRVlmW1Aw5FoRmtJqq/VX85Yu/\nMPOPM+tGD5fDRZYrixtG3cAjHz9SL4jOIY669UmAgq4FzRomGu4dBQwRsc6QE8n0zLycjVYRbOUS\nvt94dHvd7KvZx8T+E6nx1DC3eG5de+A8B466GjrdsrpRsbeCvJy8RvcIHnH2HNjDxSsvjotnd6SY\n75nRKoKtXB71WeMCSnFk9pEMzR1K0ZYiFK2zrgVGi4DCpDvT2VS1iV4P9woZBxTsLlTYr5BfjPwF\nLocr6RlyTGmMVlPYr5Crhl0F+EYPp8PJpSdcyglHnUCNu6bO3F08s5jpJzSOyfGqN6J8aqmSIceU\nxoiK5VuX4xAHEwdMxKte3v3yXdZOX0u6K72eU+m7X76LQxz0O6Jf3bWqyqkFp3Ju33NbvE9r95zi\ngSmN0WrC/SAHn3fIfQhB6JHdA696efWzV8PyLQvXszsRmPXMSBiBjdMbRt3Aibkncu1r17Jy20qu\nGXENvz3lt0lNsB6J9cyUxkgooXzL0p3puL3upCZYt7xnRsoSKmShxlNDlisrbgnWYx2ebUpjJJzC\nfoXMGDwD+N5M3b97f4blDYuLM2as43Jsc9NIGIFIzAHdBzBv/TzA53ajqpTuKqXXQ71iOkWr3FfJ\nqk9XsbVqKwDPfPJMTFxvTGmMhBH4xv945scM6TmEz/7xGdVuX5yMonRO68yyyctiojCBtRNAmiMN\ngEWli1hQsiBqxbTpmRF3GsbRLC1fypppa5g5dGbdOU5xMmvkrJjs8FftryK3Sy7jjhkHULd2qvZU\nk52WzdKJS6NSTLOeGXGlqQQfh9yHGrn353fJp+TKkqimToH7BUeYhqLhSGPWMyNlaMpaFvhAB+Jv\nMpwZ7Ni3I+p81IH7ZadlhzwuSNRWOlMaI+40TPAhIkwZMIUsVxZury+zjUc95GTkRP2BrtpfxfC8\n4Rx3xHGNjjnFScFhBZxz7Dmt7h/MEGAkiICzZSDBxwdffcBB90Hg+8C1aL2Wg6eCoZYdXvWiqlG7\n3thIY8SdYN+z+efOZ/GExfWS/x2dczQer4elm5dGdZ/g9LrBQWuZzkyG9BzC+5e9HxMnTzMEGAkj\n2AzcFBt+voHhvcJajzfJ7Ddm88C6B1DVkIlAQmGGACMlCYwEgeQYwQTSQkWrMBD/uBtTGiOhFPYr\n5LqTrqsXIu3AwXUnXReTPZpExN3Y9MxIOAWPFPDVd/XzpLWUYCPeWGINI2XxeD307daXnp16Mm/8\nPBTlF2t+QU5GDh6vJylBZZFiI41hYIYAw4grpjSGESGmNIYRIQld04jIHiDcAjXdgWarECSIVJED\nTJZQxEqOAlUNqxZMQpUmEkSkJNyFWUeQA0yWVJHDpmeGESGmNIYRIamsNAuTLYCfVJEDTJZQJFyO\nlF3TGEaqksojjWGkJElXGhG5UES2iohXRIYHtZ8lIhtFpNz/84wQ1/5RRLYkSxYRyRaRP4nIp/7r\n7kuGHP5jw/ztn4vIoxIc5RUfWY4QkbdFZL+IPNbgmql+WTaLyOsi0j1JcqSLyEIR+cz/P5ocrRyA\nL4FbMl/AAOA44B18FaID7UOBPP/vA4GdDa6bBBQBW5IlC5ANnO7/PR14HxifjL8JsB4YBQiwJhZy\ntCBLJ2AscBXwWFC7C9gNdPe/vx+4M9Fy+I/dBczx/+4IyBTtK+lezqq6DaDhF6OqBqck2QpkiUiG\nqlaLSGfgRuBKYEUSZTkAvO0/p0ZESoF8oiRSOYBuQI6qfuS/bgkwEZ/yxEuWfwMfiMixDS4R/6uT\niHwL5ACfJ0EOgMuB/v7zvMRoMzbp07MwmQyUqmq1//09wIPAgRSQBQAROQw4D3gzCXL0AnYEHdvh\nb0s4qloL/BdQDlQAxwNPJVoO//8D4B4RKRWRP4hITOp4JGSkEZE3gKNCHPqNqr7SwrU/BP4HONv/\nfgjwA1W9QUT6JFOWoHYXsAx4VFX/niw5Wks0soToKw2f0gwF/g7MA2YDcxIpB77Pdj5QrKo3isiN\nwANA4zqGreg47qjquNZcJyL5wEvApar6hb95NDBcRLbjk/9IEXlHVU9LgiwBFgJ/U9VHwu0vxnLs\npP60MN/fFldZmmCIv88vAERkBXBLEuT4Ft9M5EX/+z8AM5s+PXxSdnrmH17/BNyiqh8G2lV1garm\nqWoffAvAz8JVmFjL4j82B+gKXB9PGZqTQ1V3AXtFZJTfanYpEOk3c6zYCRwvIgHnx7OAbYkWQn2r\n/1eB0/xNZwJ/jVXnSX0BF+Cbg1cDVcCf/e2/Bf4NfBL0OrLBtX2IrfUsIlnwfaMrvg9FoP3nyfib\nAMOBLcAXwGP4N67jJYv/2HbgH8B+/znH+9uv8v9NNuP74B6RJDkKgPf8crwJ9I7F38Q8AgwjQlJ2\nemYYqYopjWFEiCmNYUSIKY1hRIgpjWFEiCmNYUSIKY1hRIgpjWFEyP8Hu+kKYmRHClEAAAAASUVO\nRK5CYII=\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x1163184a8>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -919,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 28,
    "metadata": {
     "scrolled": true
    },
@@ -1131,7 +1121,7 @@
        "4      POINT (-122.534 38.584)  "
       ]
      },
-     "execution_count": 208,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1142,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1158,11 +1148,14 @@
     "gdf.crs = {'init' :'epsg:3310'}\n",
     "# save as??? \n",
     "\n",
+    "print(\"exporting shapefile\")\n",
     "out = r\"/Users/anayahall/projects/grapevine/data/clean/clean_swis.shp\"\n",
     "\n",
     "type(gdf)\n",
     "\n",
-    "gdf.to_file(driver='ESRI Shapefile', filename=out)"
+    "gdf.to_file(driver='ESRI Shapefile', filename=out)\n",
+    "\n",
+    "print(\"DONE\")"
    ]
   }
  ],
