made county centroids for biomass inventory instead of poly

--- a/scripts/buffers.ipynb
+++ b/scripts/buffers.ipynb
@@ -26,13 +26,16 @@
   {
    "cell_type": "code",
    "execution_count": 205,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#change wd\n",
     "os.chdir(\"/Users/anayahall/projects/grapevine\")\n",
     "\n",
     "gdf =  gpd.read_file(\"data/clean/clean_swis.shp\")\n",
+    "# load census tract shapefile\n",
     "CA = gpd.read_file(\"data/raw/tl_2018_06_tract/tl_2018_06_tract.shp\")\n",
     "# print(CA.crs)\n",
     "# CA.plot()"
@@ -575,6 +578,15 @@
     "ax.set_title('Composting Permits in CA', fontdict={'fontsize': '12', 'fontweight' : '3'})\n",
     "# plt.savefig(\"maps/map_export.png\", dpi=300)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
