--- a/scripts/land.ipynb
+++ b/scripts/land.ipynb
@@ -2,42 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'rasterio'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-71fd47ccd0b8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mrasterio\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'rasterio'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Reading in Rasters\n",
     "# Rasterio tutorial here: \n",
     "#https://automating-gis-processes.github.io/CSC18/lessons/L6/reading-raster.html\n",
     "\n",
-    "\n",
     "# First, load packages\n",
     "import pandas as pd\n",
     "import os\n",
     "import rasterio\n",
-    "\n",
-    "\n",
-    "# import numpy as np\n",
-    "# import shapely as sp\n",
+    "import numpy as np\n",
+    "import shapely as sp\n",
     "\n",
     "# import matplotlib.pyplot as plt\n",
     "# import geopandas as gpd\n",
     "# from geopandas import GeoSeries, GeoDataFrame\n",
     "# # only for jupyter nb to show plots inline\n",
-    "# %matplotlib inline \n",
-    "\n"
+    "# %matplotlib inline \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "rasterio.io.DatasetReader"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.chdir(\"/Users/anayahall/projects/grapevine\")\n",
+    "\n",
+    "fp = \"data/interim/CAMLC2010/California Augmented Multisource Landcover 20101.tif\"\n",
+    "raster = rasterio.open(fp)\n",
+    "type(raster)"
    ]
   }
  ],
