--- a/scripts/swis_preprocessing.ipynb
+++ b/scripts/swis_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -41,7 +41,10 @@
     "#######################################################################\n",
     "# Starting from INTERIM data (somewhat preprocessed in R - may come back to)\n",
     "#######################################################################\n",
-    "\n",
+    "# from R: \n",
+    "# orginal data cleaned from excel: \"data/swis_clean.csv\"\n",
+    "# #filter to composting (may come back to this to select all other sites as well)\n",
+    "# comp_swis <- swis_clean %>% filter(str_detect(Activity, \"Compost\") | str_detect(Activity, \"Chip\") & OperationalStatus != \"Closed\")\n",
     "\n",
     "#read in compost facilities csv\n",
     "df = pd.read_csv(\"data/interim/swis_compost.csv\")"
@@ -49,27 +52,199 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SwisNo</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>County</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Place</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Activity</th>\n",
+       "      <th>OperationalStatus</th>\n",
+       "      <th>AcceptedWaste</th>\n",
+       "      <th>Throughput</th>\n",
+       "      <th>ThroughputUnits</th>\n",
+       "      <th>Capacity</th>\n",
+       "      <th>CapacityUnits</th>\n",
+       "      <th>Acreage</th>\n",
+       "      <th>RemainingCapacity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>01-AA-0310</td>\n",
+       "      <td>Tri-Cities Rec. and Disp. CD Chip/Grind</td>\n",
+       "      <td>Alameda</td>\n",
+       "      <td>7010 Auto Mall Pkwy.</td>\n",
+       "      <td>Fremont</td>\n",
+       "      <td>37.49078</td>\n",
+       "      <td>-121.99040</td>\n",
+       "      <td>Transfer/Processing</td>\n",
+       "      <td>Small Vol CD Wood Debris ChipGrind Op</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>Wood waste</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>Tons/month</td>\n",
+       "      <td>62369.0</td>\n",
+       "      <td>Tons/year</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>27-AA-0090</td>\n",
+       "      <td>Breien-Eade Compost Venture</td>\n",
+       "      <td>Monterey</td>\n",
+       "      <td>1 Pine Valley Road</td>\n",
+       "      <td>San Ardo</td>\n",
+       "      <td>36.12481</td>\n",
+       "      <td>-121.00886</td>\n",
+       "      <td>Composting</td>\n",
+       "      <td>Composting Operation (Ag)</td>\n",
+       "      <td>Closed</td>\n",
+       "      <td>Agricultural,Manure</td>\n",
+       "      <td>40000.0</td>\n",
+       "      <td>Cu Yards/year</td>\n",
+       "      <td>40000.0</td>\n",
+       "      <td>Cu Yards/year</td>\n",
+       "      <td>480.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>30-AB-0378</td>\n",
+       "      <td>Golden Rain Foundation Composting Op.</td>\n",
+       "      <td>Orange</td>\n",
+       "      <td>24401 Moulton Parkway</td>\n",
+       "      <td>Laguna Hills</td>\n",
+       "      <td>33.60377</td>\n",
+       "      <td>-117.72490</td>\n",
+       "      <td>Composting</td>\n",
+       "      <td>Composting Operation (Green Waste)</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>Green Materials</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>Tons/day</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>Cu Yards/year</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>19-AR-5584</td>\n",
+       "      <td>Dept. of Rec. &amp; Parks Greenwaste Rec.</td>\n",
+       "      <td>Los Angeles</td>\n",
+       "      <td>5400 Griffith Park Dr</td>\n",
+       "      <td>Los Angeles (City)</td>\n",
+       "      <td>34.11722</td>\n",
+       "      <td>-118.27222</td>\n",
+       "      <td>Composting</td>\n",
+       "      <td>Chipping and Grinding Activity Fac./ Op.</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>Green Materials</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>Tons/day</td>\n",
+       "      <td>19750.0</td>\n",
+       "      <td>Tons/year</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>28-AA-0002</td>\n",
+       "      <td>Clover Flat Resource Recovery Park</td>\n",
+       "      <td>Napa</td>\n",
+       "      <td>4380 Silverado Trail Road</td>\n",
+       "      <td>Calistoga</td>\n",
+       "      <td>38.58400</td>\n",
+       "      <td>-122.53400</td>\n",
+       "      <td>Composting</td>\n",
+       "      <td>Composting Facility (Other)</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>Food Wastes,Green Materials</td>\n",
+       "      <td>2500.0</td>\n",
+       "      <td>Cubic Yards</td>\n",
+       "      <td>2500.0</td>\n",
+       "      <td>Cubic Yards</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Index(['SwisNo', 'Name', 'County', 'Location', 'Place', 'Latitude',\n",
-       "       'Longitude', 'Category', 'Activity', 'OperationalStatus',\n",
-       "       'AcceptedWaste', 'Throughput', 'ThroughputUnits', 'Capacity',\n",
-       "       'CapacityUnits', 'Acreage', 'RemainingCapacity'],\n",
-       "      dtype='object')"
+       "       SwisNo                                     Name       County  \\\n",
+       "0  01-AA-0310  Tri-Cities Rec. and Disp. CD Chip/Grind      Alameda   \n",
+       "1  27-AA-0090              Breien-Eade Compost Venture     Monterey   \n",
+       "2  30-AB-0378    Golden Rain Foundation Composting Op.       Orange   \n",
+       "3  19-AR-5584    Dept. of Rec. & Parks Greenwaste Rec.  Los Angeles   \n",
+       "4  28-AA-0002       Clover Flat Resource Recovery Park         Napa   \n",
+       "\n",
+       "                    Location               Place  Latitude  Longitude  \\\n",
+       "0       7010 Auto Mall Pkwy.             Fremont  37.49078 -121.99040   \n",
+       "1         1 Pine Valley Road            San Ardo  36.12481 -121.00886   \n",
+       "2      24401 Moulton Parkway        Laguna Hills  33.60377 -117.72490   \n",
+       "3      5400 Griffith Park Dr  Los Angeles (City)  34.11722 -118.27222   \n",
+       "4  4380 Silverado Trail Road           Calistoga  38.58400 -122.53400   \n",
+       "\n",
+       "              Category                                  Activity  \\\n",
+       "0  Transfer/Processing     Small Vol CD Wood Debris ChipGrind Op   \n",
+       "1           Composting                 Composting Operation (Ag)   \n",
+       "2           Composting        Composting Operation (Green Waste)   \n",
+       "3           Composting  Chipping and Grinding Activity Fac./ Op.   \n",
+       "4           Composting               Composting Facility (Other)   \n",
+       "\n",
+       "  OperationalStatus                AcceptedWaste  Throughput ThroughputUnits  \\\n",
+       "0            Active                   Wood waste       200.0      Tons/month   \n",
+       "1            Closed          Agricultural,Manure     40000.0   Cu Yards/year   \n",
+       "2            Active              Green Materials        20.0        Tons/day   \n",
+       "3            Active              Green Materials        50.0        Tons/day   \n",
+       "4            Active  Food Wastes,Green Materials      2500.0     Cubic Yards   \n",
+       "\n",
+       "   Capacity  CapacityUnits  Acreage  RemainingCapacity  \n",
+       "0   62369.0      Tons/year     90.0                NaN  \n",
+       "1   40000.0  Cu Yards/year    480.0                NaN  \n",
+       "2   10000.0  Cu Yards/year      3.0                NaN  \n",
+       "3   19750.0      Tons/year      3.0                NaN  \n",
+       "4    2500.0    Cubic Yards      NaN                NaN  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.columns\n",
-    "#df.head()\n",
+    "df.head()\n",
     "#df.tail()\n",
     "#df.info()"
    ]
