cost distance double-checked and working inside LP test

--- a/scripts/LPtest.ipynb
+++ b/scripts/LPtest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,8 +15,7 @@
     "\n",
     "import pulp\n",
     "import scipy as sp\n",
-    "from geopy.distance import great_circle\n",
-    "from geopy.distance import geodesic\n",
+    "from scipy.spatial import distance_matrix\n",
     "\n",
     "# import plotly.plotly as py\n",
     "# import plotly.graph_objs as go\n",
@@ -27,88 +26,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 145,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>FIPS</th>\n",
-       "      <th>COUNTY</th>\n",
-       "      <th>disposal.y</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>56</th>\n",
-       "      <td>6037</td>\n",
-       "      <td>Los Angeles</td>\n",
-       "      <td>307295.084576</td>\n",
-       "      <td>POINT (-118.5720592538903 34.14803912013723)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3206</th>\n",
-       "      <td>6059</td>\n",
-       "      <td>Orange</td>\n",
-       "      <td>104525.755860</td>\n",
-       "      <td>POINT (-117.8563081974633 33.53332689323803)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4106</th>\n",
-       "      <td>6025</td>\n",
-       "      <td>Imperial</td>\n",
-       "      <td>6751.167110</td>\n",
-       "      <td>POINT (-115.5613145428947 32.79849442795177)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5906</th>\n",
-       "      <td>6073</td>\n",
-       "      <td>San Diego</td>\n",
-       "      <td>113139.598593</td>\n",
-       "      <td>POINT (-117.2241057245406 32.94260371968307)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      FIPS       COUNTY     disposal.y  \\\n",
-       "56    6037  Los Angeles  307295.084576   \n",
-       "3206  6059       Orange  104525.755860   \n",
-       "4106  6025     Imperial    6751.167110   \n",
-       "5906  6073    San Diego  113139.598593   \n",
-       "\n",
-       "                                          geometry  \n",
-       "56    POINT (-118.5720592538903 34.14803912013723)  \n",
-       "3206  POINT (-117.8563081974633 33.53332689323803)  \n",
-       "4106  POINT (-115.5613145428947 32.79849442795177)  \n",
-       "5906  POINT (-117.2241057245406 32.94260371968307)  "
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# mini gdfs of county wastes (tbm - location and MSW for 2014) \n",
     "c = gpd.read_file(\"data/clean/techbiomass_pts.shp\")\n",
@@ -119,14 +39,12 @@
     "# subset out four counties\n",
     "csub = c[(c['COUNTY'] == \"Los Angeles\") | (c['COUNTY'] == \"San Diego\")| \n",
     "         (c['COUNTY'] == \"Orange\")| (c['COUNTY'] == \"Imperial\")].copy()\n",
-    "# csub = c[(c['COUNTY'] == \"San Diego\")| (c['COUNTY'] == \"Imperial\")].copy()\n",
-    "\n",
-    "csub\n"
+    "# csub = c[(c['COUNTY'] == \"San Diego\")| (c['COUNTY'] == \"Imperial\")].copy()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +56,7 @@
        " 'San Diego': 113139.59859294}"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,20 +69,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 147,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['30-AB-0378', '19-AR-5584', '37-AB-0011', '13-AA-0095', '19-AA-1060']"
-      ]
-     },
-     "execution_count": 120,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Mini gdfs of facilites (location and capacity)\n",
     "f = gpd.read_file(\"data/clean/clean_swis.shp\")\n",
@@ -178,50 +85,98 @@
     "fsub = fsub[0:5].copy()\n",
     "fdict = dict(zip(fsub['SwisNo'], fsub['cap_m3'])) #alt is use SwisNo\n",
     "\n",
-    "facnames = []\n",
-    "for key, value in fdict.items():\n",
-    "#     print(key)\n",
-    "    facnames.append(key)\n",
-    "facnames\n"
+    "\n",
+    "def get_dict_names(dict):\n",
+    "    names = []\n",
+    "    for key, value in dict.items():\n",
+    "    #     print(key)\n",
+    "        names.append(key)\n",
+    "    return names\n",
+    "\n",
+    "facnames = get_dict_names(fdict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type C:  <class 'list'>\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'13-AA-0095': 54803.3024,\n",
-       " '19-AA-1060': 9174.66,\n",
-       " '19-AR-5584': 33823.9132,\n",
-       " '30-AB-0378': 7645.55,\n",
-       " '37-AB-0011': 7645.55}"
+       "[array([1.00692983, 0.30141897, 1.89468187, 3.37572445, 0.26869847]),\n",
+       " array([0.14909844, 0.71687781, 0.95243269, 2.512408  , 0.90761707]),\n",
+       " array([2.30858632, 3.01463854, 1.6204382 , 0.23448852, 3.16363448]),\n",
+       " array([0.82941893, 1.57425123, 0.09146703, 1.81763161, 1.75937171])]"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fdict\n",
-    "# come back to distance matrix - use fake data for now"
+    "# CREATE DISTANCE MATRIX #################################\n",
+    "\n",
+    "# function to make array of coordinates from above:\n",
+    "def geo_to_coords(df):\n",
+    "    df['coord'] = \"\"\n",
+    "    for index, row in df.iterrows():\n",
+    "    #      print('index', index)\n",
+    "    #      print('row', row)\n",
+    "         for pt in list(row['geometry'].coords): \n",
+    "    #         print(pt)\n",
+    "            df.at[index,'coord'] = np.asarray(pt)\n",
+    "\n",
+    "# RUN ON subset gdfs\n",
+    "geo_to_coords(csub)\n",
+    "geo_to_coords(fsub)\n",
+    "\n",
+    "# Make coords into list for cost-distance matrix\n",
+    "C = list(csub.coord)\n",
+    "F = list(fsub.coord)\n",
+    "\n",
+    "print(\"type C: \", type(C))\n",
+    "\n",
+    "# test1 = pd.DataFrame(distance_matrix(C, F), index = csub.COUNTY, columns = fsub.SwisNo)\n",
+    "cost_distance = list(distance_matrix(C,F))\n",
+    "\n",
+    "cost_distance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 165,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([-117.7249 ,   33.60377]), array([-118.27222,   34.11722]), array([-117.1805,   32.8622]), array([-115.40676,   32.97484]), array([-118.34794,   34.29626])]\n",
+      "distance between cty 1(LA) and fac 3(37AB:  1.894681870072898\n"
+     ]
+    }
+   ],
    "source": [
-    "# try using LP solver..................."
+    "# test distances to make sure they're in the right place?? - also STILL IN DEGREES!\n",
+    "import math\n",
+    "C1 = [-118.57205925,   34.14803912]\n",
+    "F3 = [-117.1805,   32.8622]\n",
+    "distance = math.sqrt( ((C1[0]-F3[0])**2)+((C1[1]-F3[1])**2) )\n",
+    "print(\"distance between cty 1(LA) and fac 3(37AB: \", distance)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -229,27 +184,27 @@
      "output_type": "stream",
      "text": [
       "Status: Optimal\n",
-      "Route_Imperial_13_AA_0095 = 0.0\n",
+      "Route_Imperial_13_AA_0095 = 6751.0\n",
       "Route_Imperial_19_AA_1060 = 0.0\n",
-      "Route_Imperial_19_AR_5584 = 6750.0\n",
+      "Route_Imperial_19_AR_5584 = 0.0\n",
       "Route_Imperial_30_AB_0378 = 0.0\n",
       "Route_Imperial_37_AB_0011 = 0.0\n",
-      "Route_Los_Angeles_13_AA_0095 = 0.0\n",
+      "Route_Los_Angeles_13_AA_0095 = 48052.0\n",
       "Route_Los_Angeles_19_AA_1060 = 0.0\n",
       "Route_Los_Angeles_19_AR_5584 = 0.0\n",
       "Route_Los_Angeles_30_AB_0378 = 0.0\n",
       "Route_Los_Angeles_37_AB_0011 = 0.0\n",
       "Route_Orange_13_AA_0095 = 0.0\n",
       "Route_Orange_19_AA_1060 = 9174.0\n",
-      "Route_Orange_19_AR_5584 = 0.0\n",
+      "Route_Orange_19_AR_5584 = 33823.0\n",
       "Route_Orange_30_AB_0378 = 7645.0\n",
       "Route_Orange_37_AB_0011 = 7645.0\n",
-      "Route_San_Diego_13_AA_0095 = 54803.0\n",
+      "Route_San_Diego_13_AA_0095 = 0.0\n",
       "Route_San_Diego_19_AA_1060 = 0.0\n",
-      "Route_San_Diego_19_AR_5584 = 27073.0\n",
+      "Route_San_Diego_19_AR_5584 = 0.0\n",
       "Route_San_Diego_30_AB_0378 = 0.0\n",
       "Route_San_Diego_37_AB_0011 = 0.0\n",
-      "Total Cost of Transportation =  1011972.6\n"
+      "Total Cost of Transportation =  548172.7914332158\n"
      ]
     }
    ],
@@ -271,13 +226,7 @@
     "compost = fdict\n",
     "\n",
     "# Creates a list of costs of each transportation path\n",
-    "costs = [   #Fac\n",
-    "         #2 3 6 10 11\n",
-    "         [2,4,5,2,1],#Imp   Counties\n",
-    "         [3,1,3,2,3], #LA\n",
-    "         [6,1,8,2,5], #ORANGE\n",
-    "         [3,4,1,5,3] #SD\n",
-    "        ]\n",
+    "costs = cost_distance\n",
     "\n",
     "# The cost data is made into a dictionary\n",
     "costs = makeDict([Counties, Facilities],costs,0)\n",
