--- a/scripts/costdistance_tests.ipynb
+++ b/scripts/costdistance_tests.ipynb
@@ -187,8 +187,7 @@
    ],
    "source": [
     "geo_to_coords(csub)\n",
-    "\n",
-    "csub"
+    "geo_to_coords(fsub)"
    ]
   },
   {
@@ -285,159 +284,113 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "geo_to_coords(fsub)\n",
-    "\n",
-    "fsub"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "type C:  <class 'list'>\n",
-      "type t:  <class 'list'>\n"
+      "type C:  <class 'list'>\n"
      ]
     },
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>SwisNo</th>\n",
-       "      <th>30-AB-0378</th>\n",
-       "      <th>19-AR-5584</th>\n",
-       "      <th>37-AB-0011</th>\n",
-       "      <th>13-AA-0095</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>COUNTY</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Los Angeles</th>\n",
-       "      <td>1.006930</td>\n",
-       "      <td>0.301419</td>\n",
-       "      <td>1.894682</td>\n",
-       "      <td>3.375724</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Orange</th>\n",
-       "      <td>0.149098</td>\n",
-       "      <td>0.716878</td>\n",
-       "      <td>0.952433</td>\n",
-       "      <td>2.512408</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Imperial</th>\n",
-       "      <td>2.308586</td>\n",
-       "      <td>3.014639</td>\n",
-       "      <td>1.620438</td>\n",
-       "      <td>0.234489</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>San Diego</th>\n",
-       "      <td>0.829419</td>\n",
-       "      <td>1.574251</td>\n",
-       "      <td>0.091467</td>\n",
-       "      <td>1.817632</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "SwisNo       30-AB-0378  19-AR-5584  37-AB-0011  13-AA-0095\n",
-       "COUNTY                                                     \n",
-       "Los Angeles    1.006930    0.301419    1.894682    3.375724\n",
-       "Orange         0.149098    0.716878    0.952433    2.512408\n",
-       "Imperial       2.308586    3.014639    1.620438    0.234489\n",
-       "San Diego      0.829419    1.574251    0.091467    1.817632"
+       "list"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "t = [[0,0],[0,1]]\n",
-    "\n",
+    "# t = [[0,0],[0,1]]\n",
     "\n",
     "C = list(csub.coord)\n",
     "F = list(fsub.coord)\n",
     "\n",
     "print(\"type C: \", type(C))\n",
-    "print(\"type t: \", type(t))\n",
+    "# print(\"type t: \", type(t))\n",
     "\n",
     "#  pd.DataFrame(distance_matrix(df.values, df.values), index=df.index, columns=df.index)\n",
-    "pd.DataFrame(distance_matrix(C, F), index = csub.COUNTY, columns = fsub.SwisNo)\n",
+    "mycosts = pd.DataFrame(distance_matrix(C, F), index = csub.COUNTY, columns = fsub.SwisNo)\n",
+    "## HORRAY THIS WORKS!! TRYING AGAIN TO GET INTO DIFFERNT FORMAT.... list of lists \n",
     "\n",
     "# distance_matrix(C,F)\n",
     "\n",
-    "            "
+    "costs = [   #Fac\n",
+    "         #2 3 6 10 11\n",
+    "         [2,4,5,2,1],#Imp   Counties\n",
+    "         [3,1,3,2,3], #LA\n",
+    "         [6,1,8,2,5], #ORANGE\n",
+    "         [3,4,1,5,3] #SD\n",
+    "        ]\n",
+    "\n",
+    "type(costs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "setting an array element with a sequence.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-138-234cfa24940f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mC\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcsub\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcoord\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mF\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfsub\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcoord\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mpaired_distances\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mC\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mF\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/Users/anayahall/anaconda/lib/python3.6/site-packages/sklearn/metrics/pairwise.py\u001b[0m in \u001b[0;36mpaired_distances\u001b[0;34m(X, Y, metric, **kwds)\u001b[0m\n\u001b[1;32m    703\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mmetric\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mPAIRED_DISTANCES\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    704\u001b[0m         \u001b[0mfunc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPAIRED_DISTANCES\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmetric\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 705\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    706\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mcallable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmetric\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    707\u001b[0m         \u001b[0;31m# Check the matrix first (it is usually done by the metric)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/anayahall/anaconda/lib/python3.6/site-packages/sklearn/metrics/pairwise.py\u001b[0m in \u001b[0;36mpaired_euclidean_distances\u001b[0;34m(X, Y)\u001b[0m\n\u001b[1;32m    596\u001b[0m     \u001b[0mdistances\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0mndarray\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mn_samples\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    597\u001b[0m     \"\"\"\n\u001b[0;32m--> 598\u001b[0;31m     \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_paired_arrays\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    599\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mrow_norms\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mY\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    600\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/anayahall/anaconda/lib/python3.6/site-packages/sklearn/metrics/pairwise.py\u001b[0m in \u001b[0;36mcheck_paired_arrays\u001b[0;34m(X, Y)\u001b[0m\n\u001b[1;32m    152\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    153\u001b[0m     \"\"\"\n\u001b[0;32m--> 154\u001b[0;31m     \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_pairwise_arrays\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    155\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mY\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    156\u001b[0m         raise ValueError(\"X and Y should be of same shape. They were \"\n",
-      "\u001b[0;32m/Users/anayahall/anaconda/lib/python3.6/site-packages/sklearn/metrics/pairwise.py\u001b[0m in \u001b[0;36mcheck_pairwise_arrays\u001b[0;34m(X, Y, precomputed, dtype)\u001b[0m\n\u001b[1;32m    107\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    108\u001b[0m         X = check_array(X, accept_sparse='csr', dtype=dtype,\n\u001b[0;32m--> 109\u001b[0;31m                         warn_on_dtype=warn_on_dtype, estimator=estimator)\n\u001b[0m\u001b[1;32m    110\u001b[0m         Y = check_array(Y, accept_sparse='csr', dtype=dtype,\n\u001b[1;32m    111\u001b[0m                         warn_on_dtype=warn_on_dtype, estimator=estimator)\n",
-      "\u001b[0;32m/Users/anayahall/anaconda/lib/python3.6/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_array\u001b[0;34m(array, accept_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, warn_on_dtype, estimator)\u001b[0m\n\u001b[1;32m    380\u001b[0m                                       force_all_finite)\n\u001b[1;32m    381\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 382\u001b[0;31m         \u001b[0marray\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0morder\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    383\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    384\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mensure_2d\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: setting an array element with a sequence."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type test1:  <class 'list'>\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[array([1.00692983, 0.30141897, 1.89468187, 3.37572445]),\n",
+       " array([0.14909844, 0.71687781, 0.95243269, 2.512408  ]),\n",
+       " array([2.30858632, 3.01463854, 1.6204382 , 0.23448852]),\n",
+       " array([0.82941893, 1.57425123, 0.09146703, 1.81763161])]"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.metrics.pairwise import paired_distances\n",
-    "C = np.asarray(csub.coord)\n",
-    "F = np.asarray(fsub.coord)\n",
-    "paired_distances(C,F)"
+    "test1 = list(distance_matrix(C,F))\n",
+    "\n",
+    "print(\"type test1: \", type(test1))\n",
+    "test1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from sklearn.metrics.pairwise import paired_distances >> FAILED\n",
+    "# C = np.asarray(csub.coord)\n",
+    "# F = np.asarray(fsub.coord)\n",
+    "# paired_distances(C,F)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# calc euclidian distance between them --> get Dij \n",
@@ -489,13 +442,6 @@
     "df = pd.DataFrame(data = test).T #this will transpose it\n",
     "# df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
